# vera_gpu_micro_app

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: copilot-instructions.md
.github/workflows/: testing.yml
CI/: cuda.dockerfile  cuda_but_no_mpi.dockerfile  nocuda.dockerfile  vera_gpu.dockerfile
cmake/: FindHighFive.cmake  FindPETSc.cmake  Findgoogletest.cmake  TestFunctions.cmake
cmfd/: CMakeLists.txt
cmfd/data/: 2x2_7g_16a_3p_serial.h5  2x2_7g_16a_3p_serial.inp  7x7_7g_16a_3p_serial.h5  7x7_7g_16a_3p_serial.inp  c5g7.xsl  cart_7x7_7g_16a_3p_serial.h5  cart_7x7_7g_16a_3p_serial.inp  cart_mini-core_7g_16a_3p_serial.h5  cart_mini-core_7g_16a_3p_serial.inp  cart_pin_7g_16a_3p_serial.h5  cart_pin_7g_16a_3p_serial.inp  mini-core_7g_16a_3p_serial.h5  mini-core_7g_16a_3p_serial.inp  pin_7g_16a_3p_serial.h5  pin_7g_16a_3p_serial.inp  small_parallel.h5  small_parallel.inp
cmfd/src/: CMFDData.hpp  PetscEigenSolver.cpp  PetscEigenSolver.hpp  PetscMatrixAssembler.cpp  PetscMatrixAssembler.hpp  ScatteringMatrix.hpp  main.cpp
cmfd/tests/: PetscKokkosTestEnvironment.cpp  PetscKokkosTestEnvironment.hpp  test_CMFDData.cpp  test_PETSc_ex3k.kokkos.cpp  test_PetscEigenSolver.cpp  test_PetscEigenSolver.hpp  test_PetscEigenSolverHeavy.cpp  test_PetscEigenSolverLight.cpp  test_PetscMatrixAssembler.cpp  test_PetscMatrixAssembler.hpp  test_PetscMatrixAssemblerHeavy.cpp  test_PetscMatrixAssemblerLight.cpp  test_coarseVsFineEigenvalue.cpp  test_main.cpp  test_preliminary.cpp  test_scatteringMatrix.cpp  test_scatteringMatrix.hpp
conduction/: CMakeLists.txt
conduction/src/: conduction_serial.cpp  conduction_serial.hpp  cylinder_node.cpp  cylinder_node.hpp  cylindrical_solver.cpp  cylindrical_solver.hpp  cylindrical_solver_base.cpp  cylindrical_solver_base.hpp  cylindrical_solver_serial.cpp  cylindrical_solver_serial.hpp  main.cpp  materials.cpp  materials.hpp
conduction/tests/: test_cylinder_node.cpp  test_cylindrical_solver.cpp  test_highfive.cpp  test_kokkos.cpp  test_main.cpp  test_petsc.cpp  test_smr_serial.cpp
moc/: CMakeLists.txt  spack.yaml
moc/data/: 2x2_7g_16a_3p_serial.h5  2x2_7g_16a_3p_serial.inp  7x7_7g_16a_3p_serial.h5  7x7_7g_16a_3p_serial.inp  cart_1region_7g_16a_3p_serial.h5  cart_1region_7g_16a_3p_serial.inp  cart_1region_7g_1a_1p_serial.h5  cart_1region_7g_1a_1p_serial.inp  cart_4region_7g_1a_1p_serial.h5  cart_4region_7g_1a_1p_serial.inp  cart_7x7_7g_16a_3p_serial.h5  cart_7x7_7g_16a_3p_serial.inp  cart_mini-core_7g_16a_3p_serial.h5  cart_mini-core_7g_16a_3p_serial.inp  cart_pin_7g_16a_3p_serial.h5  cart_pin_7g_16a_3p_serial.inp  mini-core_7g_16a_3p_serial.h5  mini-core_7g_16a_3p_serial.inp  mixed_bcs_serial.h5  mixed_bcs_serial.inp  pin_7g_16a_3p_serial.h5  pin_7g_16a_3p_serial.inp
moc/src/: CMakeLists.txt  base_moc.hpp  c5g7_library.cpp  c5g7_library.hpp  clean  eigen_solver.cpp  eigen_solver.hpp  exp_table.cpp  exp_table.hpp  kokkos_long_ray.hpp  kokkos_moc.cpp  kokkos_moc.hpp  long_ray.hpp  main.cpp  moc_base.hpp  moc_mean_time.cpp  quadrature.cpp  quadrature.hpp  serial_moc.cpp  serial_moc.hpp
moc/tests/: heavy_test_serial_moc_mini-core.cpp  test_exp_table.cpp  test_kokkos_moc_7x7_omp4.cpp  test_kokkos_moc_7x7_omp4_double.cpp  test_kokkos_moc_7x7_omp4_single.cpp  test_kokkos_moc_7x7_serial.cpp  test_kokkos_moc_7x7_serial_double.cpp  test_kokkos_moc_7x7_serial_single.cpp  test_kokkos_moc_pin_omp4.cpp  test_kokkos_moc_pin_omp4_double.cpp  test_kokkos_moc_pin_omp4_single.cpp  test_kokkos_moc_pin_serial.cpp  test_kokkos_moc_pin_serial_double.cpp  test_kokkos_moc_pin_serial_single.cpp  test_main.cpp  test_mixed_bcs.cpp  test_serial_moc_1region_16angle.cpp  test_serial_moc_1region_16angle_double.cpp  test_serial_moc_1region_16angle_single.cpp  test_serial_moc_1region_1angle.cpp  test_serial_moc_1region_1angle_double.cpp  test_serial_moc_1region_1angle_single.cpp  test_serial_moc_4region_1angle.cpp  test_serial_moc_4region_1angle_double.cpp  test_serial_moc_4region_1angle_single.cpp  test_serial_moc_7x7.cpp  test_serial_moc_7x7_double.cpp  test_serial_moc_7x7_single.cpp  test_serial_moc_mini-core_double.cpp  test_serial_moc_mini-core_single.cpp  test_serial_moc_pin.cpp  test_serial_moc_pin_double.cpp  test_serial_moc_pin_single.cpp
subchannel/: CMakeLists.txt  README.md
subchannel/data/: 3DMini.h5  HT1C1_dep.h5  ge14-3d-ax-HFP.h5  smr.h5
subchannel/src/: Constants.hpp  Properties.cpp  Properties.hpp  Solver.cpp  Solver.hpp  SubchannelData.cpp  SubchannelData.hpp  ThermalHydraulics.cpp  ThermalHydraulics.hpp  constants.hpp  geometry.cpp  geometry.hpp  linear_algebra.hpp  main.cpp  materials.cpp  materials.hpp  solver.cpp  solver.hpp  state.hpp  th.cpp  th.hpp
subchannel/tests/: io_utils.hpp  test_3x3_channels.cpp  test_ants_1x1_serial.cpp  test_ants_3x3_omp.cpp  test_ants_3x3_serial.cpp  test_ants_7x7_omp.cpp  test_ants_7x7_serial.cpp  test_ants_ge14_minicore_serial.cpp  test_ants_minicore_cuda.cpp  test_ants_minicore_omp.cpp  test_ants_minicore_serial.cpp  test_ants_smr_omp.cpp  test_ants_smr_serial.cpp  test_ants_watts_bar_cuda.cpp  test_ants_watts_bar_omp.cpp  test_geometry.cpp  test_single_channel.cpp  verification_3x3.cpp
utils/: CMakeLists.txt
utils/src/: argument_parser.cpp  argument_parser.hpp  hdf5_kokkos.hpp  hdf5_utils.hpp  vectors.hpp
utils/tests/: test_argument_parser.cpp  test_hdf5_utils.cpp
